# evo

./: evo.def  evo2_run  evo_pull  evo_run  getgpu  llama_pull  llama_run  pyproject.toml
notebooks/: nvidia-nim.ipynb
src/evo/: __init__.py
