[project]
name = "evo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andreas Werdich", email = "andreas_werdich@hms.harvard.edu" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
evo = "evo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
