[project]
name = "evo"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andreas Werdich", email = "andreas_werdich@hms.harvard.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy<2.0",
    "openai>=1.85.0",
    "pandas>=2.3.0",
    "pydantic>=2.11.5",
]

[project.scripts]
evo = "evo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.3",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
]
